@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Extended `oq check_input` to accept workflow files
   * Added an output "Average Losses By Taxonomy"
   * Extended `oq run` to accept .toml files and to use the job cache
   * Replaced `dbserver.cache` parameter in openquake.cfg with a cache
